# CRUD_App

./: .pdm-python  PKG-INFO  pyproject.toml  todo.db  toudou.env
src/toudou/: __init__.py  models.py  services.py  views.py
src/toudou/templates/: create.html  header.html  home.html  import.html  list.html  update.html
